# teeb_trade

./: .gitignore  README_DEPLOY.md  docker-compose.yaml
backend/: Cargo.toml  Containerfile
backend/src/: binance_client.rs  history.rs  main.rs  model.rs  scanner.rs  store.rs  verifier.rs  ws_server.rs
frontend/: Containerfile  package-lock.json
frontend/src/: app.css
frontend/src/lib/: types.ts
frontend/src/routes/: +layout.svelte  +page.svelte
