[package]
name = "teeb_trade_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
warp = "0.3"
chrono = "0.4"
env_logger = "0.10"
log = "0.4"
dotenv = "0.15"
futures-util = "0.3"
url = "2.4"
